--- a/CalcStyle.css
+++ b/CalcStyle.css
@@ -3,86 +3,103 @@
 }
 
 body {
-    margin: 0;
-    height: 100%;
+    padding-top: 20px;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: flex-start;
+
 }
 
 .result {
-    grid-column: auto;
+
+    padding-top: 50px;
+    padding-left: 5px;
+    padding-right: 15px;
+    padding-bottom: 15px;
     color: white;
     font-size: 40px;
-    padding: 10px;
-    text-align: right;
+    justify-content: flex-end;
+    align-self: flex-end;
+    display: block;
+    height: fit-content;
+    flex-wrap: wrap;
+    height: 100px;
+    max-height: 100px;
 }
 
 .memory {
-    grid-column: auto;
+
+    padding-top: 20px;
+    padding-left: 5px;
+    padding-right: 15px;
+    padding-bottom: 15px;
     color: white;
-    font-size: 30px;
-    padding: 10px;
-    height: 100px;
-    max-height: 100px;
-    text-align: right;
+    font-size: 20px;
+    justify-content: flex-end;
+    align-self: flex-end;
+    display: block;
+    height: fit-content;
+    flex-wrap: wrap;
+    height: 30px;
+    max-height: 30px;
 }
 
 .countainer {
-    width: 100%;
-    height: auto;
-    border: solid;
-    background-color: black;
+    display: flex;
+    flex-direction: column;
+    background-color: #000000;
+    justify-content: center;
+    align-items: flex-start;
     border-radius: 15px;
-    padding: 20px;
-    padding-bottom: 32px;
 
-}
-
-.buttons {
-    width: auto;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 80px;
-    gap: 2%;
 }
 
 .grey {
     background-color: #a6a6a6;
     color: #212121;
     border-radius: 50%;
+    flex: 0 1 25%;
     justify-content: center;
     align-items: center;
     border-top: none;
     border-left: none;
     cursor: pointer;
     font-size: 22px;
+    width: 50px;
+    height: 50px;
+    margin: 3px;
 }
 
 .dark {
     background-color: #2e2e2e;
     color: #eceded;
     border-radius: 50%;
+    flex: 0 1 25%;
     justify-content: center;
     align-items: center;
     border-top: none;
     border-left: none;
     cursor: pointer;
     font-size: 22px;
-
+    width: 50px;
+    height: 50px;
+    margin: 3px;
 }
 
 .orange {
     background-color: #fe9500;
     color: #eceded;
     border-radius: 50%;
+    flex: 0 1 25%;
     justify-content: center;
     align-items: center;
     border-top: none;
     border-left: none;
     cursor: pointer;
     font-size: 22px;
-
+    width: 50px;
+    height: 50px;
+    margin: 3px;
 
 }
 
@@ -90,11 +107,16 @@ body {
     background-color: #2e2e2e;
     color: #eceded;
     border-radius: 20px;
-    justify-content: center;
-    align-items: center;
+    flex: 0 1 25%;
+    justify-content: left;
+    align-items: left;
+    height: 50px;
     border-top: none;
     border-left: none;
     cursor: pointer;
     font-size: 22px;
-    grid-column: 1/3;
+    width: 106px;
+    height: 50px;
+    margin: 3px;
+    margin-left: 6px;
 }
